--- a/examples/app.css
+++ b/examples/app.css
@@ -1,9 +1,12 @@
 html, body {
     width: 100%;
     height: 100%;
-    background: #e9e9e9;
-    overflow: hidden;
     margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
     padding: 0;
 }
 
@@ -12,7 +15,6 @@ html, body {
     height: 100%;
 
     margin: 0 auto;
-    padding: 0;
 
     background: #ffffff;
     border: 1px solid #999;
